--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,11 @@
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
+fastapi==0.104.1
+uvicorn==0.24.0
 python-dotenv==1.0.0
 google-generativeai==0.3.2
-youtube-transcript-api==0.6.2
+youtube-transcript-api==0.6.1
 PyPDF2==3.0.1
 python-multipart==0.0.6
-pydantic==2.5.3
+pydantic==2.4.2
+pydantic-core==2.10.1
+annotated-types==0.6.0
+typing-extensions==4.8.0
