--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,7 @@
-fastapi==0.100.0
-uvicorn==0.23.0
-python-dotenv==1.0.0
-google-generativeai==0.3.2
-youtube-transcript-api==0.6.1
-PyPDF2==3.0.1
-python-multipart==0.0.6
-pydantic==1.10.12
+fastapi
+uvicorn
+python-dotenv
+google-generativeai
+youtube-transcript-api
+PyPDF2
+python-multipart
