--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.1.7",
+    "axios": "^1.6.0",
+    "lucide-react": "^0.344.0",
+    "next": "^16.1.6",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "axios": "^1.6.0",
-    "react-markdown": "^9.0.0",
-    "lucide-react": "^0.344.0"
+    "react-markdown": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
