--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "axios": "^1.6.0",
     "lucide-react": "^0.344.0",
-    "next": "15.1.7",
+    "next": "^15.1.8",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-markdown": "^9.0.0"
