--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
   "framework": "nextjs",
-  "buildCommand": "npm install && npm run build"
+  "buildCommand": "rm -rf node_modules package-lock.json && npm install && npm run build"
 }
