--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,3 @@
 {
-  "framework": "nextjs",
-  "buildCommand": "rm -rf node_modules package-lock.json && npm install && npm run build"
+  "framework": "nextjs"
 }
